# HuffmanCoding

./: .gitignore  LICENSE.md  README.md
app/: CMakeLists.txt
app/headers/: decode.hpp  encode.hpp  huffman.hpp  util.hpp
app/src/: decode.cpp  encode.cpp  huffman.cpp  main.cpp  util.cpp
release/linux/: huffmancoding
release/mac/: huffmancoding
